# Accounting-CPP

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  accountswithcatchtests  compile_commands.json  installodb.sh
.github/workflows/: cmake.yml
cmake/Modules/: UseODB.cmake
lib/: CMakeLists.txt  account.cpp  account.hpp  businessentity.hpp  sourcedocument.cpp  sourcedocument.hpp  transaction.cpp  transaction.hpp
lib/include/: account.hpp  businessentity.hpp  entitybase.hpp  repository.hpp  sourcedocument.hpp  transaction.hpp
lib/src/: EntityBase.cpp  account.cpp  businessentity.cpp  entitybase.cpp  repository.cpp  sourcedocument.cpp  transaction.cpp
tests/: CMakeLists.txt  accounttest.cpp  businessentitytest.cpp  sourcedocumenttest.cpp  transactiontest.cpp
tests/entity_tests/: accounttest.cpp  businessentitytest.cpp  sourcedocumenttest.cpp  transactiontest.cpp
tests/repository_tests/: repositorytest.cpp
